feat: add user person and addresses update endpoints